[package]
name = "bevy_iced"
version = "0.6.0"
edition = "2021"
description = "Iced integration for Bevy"
authors = ["tasgon <me@tas.sh>"]
license = "MIT OR Apache-2.0"
keywords = ["bevy", "iced", "ui", "game", "gui"]
homepage = "https://github.com/tasgon/bevy_iced"
repository = "https://github.com/tasgon/bevy_iced"
documentation = "https://docs.rs/bevy_iced"

[dependencies]
bevy_app = "0.18"
bevy_derive = "0.18"
bevy_ecs = "0.18"
bevy_input = "0.18"
bevy_math = "0.18"
bevy_render = "0.18"
bevy_utils = "0.18"
bevy_window = "0.18"

iced_core = "0.14"
iced_runtime = "0.14"
iced_wgpu = { path = "iced_wgpu_local" }
iced_widget = { version = "0.14", features = ["wgpu"] }

[dev-dependencies]
bevy = "0.18"
rand = "0.8"
